--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Common files
+.DS_Store
+*.orig
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
